# Module

AI_Module/: README.md  generate_data.py  pyproject.toml  requirements.txt  train_model.py
